# spelling-2022

./: .gitignore  .gitmodules  CMakeLists.txt
data/: demo.txt
src/: README.md  alpha.h  corrections.cpp  corrections.h  database.h  main.cpp  tokenizer.cpp  tokenizer.h  wordlist.cpp  wordlist.h
